# aoc2021

./: pyproject.toml
day1/: task1.py  task2.py
day10/: task1.py  task2.py
day11/: task1.py  task2.py
day12/: task1.py  task2.py
day13/: task1.py
day14/: task1.py  task2.py
day15/: task1.py  task2.py
day2/: task1.py  task2.py
day3/: task1.py  task2.py
day4/: task1.py  task2.py
day5/: task1.py
day6/: task1.py  task2.py
day7/: task1.py  task2.py
day8/: task1.py  task2.py
day9/: task1.py  task2.py
