[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Szymon Piechaczek <szymon.piechaczek@yahoo.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
